# cellular-automata

./: .gitignore  CMakeLists.txt  README.md
cmake/: font_data.h.in
include/: engine.h  input_manager.h  physics.h  renderer.h  window_manager.h  world.h
include/ui/: ui_button.h  ui_core.h  ui_label.h  ui_manager.h  ui_panel.h
include/utils/: color_utils.h  draw_utils.h
src/: engine.cpp  input_manager.cpp  main.cpp  renderer.cpp  window_manager.cpp  world.cpp
src/utils/: color_utils.cpp
