CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(CellularAutomata VERSION 1.0)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/out)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/out)

FIND_PACKAGE(SDL2 REQUIRED)

FILE(GLOB_RECURSE SOURCES "src/*.cpp")

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS})
ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE INCLUDE)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE SDL2::SDL2 SDL2::SDL2main)