CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(CellularAutomata VERSION 1.0)

# ---- PROJECT GLOBAL SETTINGS ----

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/out)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/out)

INCLUDE(FetchContent)


# ---- DEPENDENCIES ----

# SDL
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_ttf REQUIRED)

# Dear ImGui
FetchContent_Declare(
    imgui
    GIT_REPOSITORY  https://github.com/ocornut/imgui.git
    GIT_TAG         v1.91.8-docking
)
FetchContent_MakeAvailable(imgui)


# ---- SOURCE FILES ----

FILE(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.cpp")

SET(IMGUI_SOURCES
    ${imgui_SOURCE_DIR}/imgui.cpp
    ${imgui_SOURCE_DIR}/imgui_draw.cpp
    ${imgui_SOURCE_DIR}/imgui_widgets.cpp
    ${imgui_SOURCE_DIR}/imgui_tables.cpp
    ${imgui_SOURCE_DIR}/imgui_demo.cpp
    ${imgui_SOURCE_DIR}/backends/imgui_impl_sdl2.cpp
    ${imgui_SOURCE_DIR}/backends/imgui_impl_sdlrenderer2.cpp
)


# ---- BUILD TARGETS ----

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES} ${IMGUI_SOURCES})


# ---- CONFIGS & DEFINES ----

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE BUILD_DEBUG)
else()
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE BUILD_RELEASE)
endif()


# ---- INCLUDES & LINKING ----

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
    include
    ${SDL2_INCLUDE_DIRS}
    ${imgui_SOURCE_DIR}
    ${imgui_SOURCE_DIR}/backends
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
    SDL2::SDL2
    SDL2::SDL2main
    SDL2_ttf::SDL2_ttf
)