CMAKE_MINIMUM_REQUIRED(VERSION 3.15)
PROJECT(CellularAutomata VERSION 1.0)

# ---- PROJECT GLOBAL SETTINGS ----

SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED True)

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/out)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/out)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/out)

INCLUDE(FetchContent)


# ---- DEPENDENCIES ----

# SDL
FIND_PACKAGE(SDL2 REQUIRED)
FIND_PACKAGE(SDL2_ttf REQUIRED)

# ---- EMBEDDED ASSETS ----

FILE(READ "assets/fonts/pixel_font.ttf" FONT_HEX HEX)
STRING(REGEX REPLACE "([0-9a-f][0-9a-f])" "0x\\1," FONT_BYTES "${FONT_HEX}")
CONFIGURE_FILE(
    "${CMAKE_SOURCE_DIR}/cmake/font_data.h.in"
    "${CMAKE_BINARY_DIR}/generated/font_data.h"
    @ONLY
)

# ---- SOURCE FILES ----

FILE(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS "src/*.cpp")

# ---- BUILD TARGETS ----

ADD_EXECUTABLE(${PROJECT_NAME} ${SOURCES})


# ---- CONFIGS & DEFINES ----

if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE BUILD_DEBUG)
else()
    TARGET_COMPILE_DEFINITIONS(${PROJECT_NAME} PRIVATE BUILD_RELEASE)
endif()


# ---- INCLUDES & LINKING ----

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE
    include
    ${SDL2_INCLUDE_DIRS}
    "${CMAKE_BINARY_DIR}/generated"
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} PRIVATE
    SDL2::SDL2
    SDL2::SDL2main
    SDL2_ttf::SDL2_ttf
)